--- a/app/scss/programming.scss
+++ b/app/scss/programming.scss
@@ -24,6 +24,7 @@ body {
 	flex-wrap: wrap;
 	margin: 20px;
 	top: 100px;
+	z-index: 0;
 }
 
 .container .card {
